--- a/css/style.css
+++ b/css/style.css
@@ -190,6 +190,9 @@ img {
   .testing__row {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
 }
 @media (max-width: 585px) {
