--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -31,8 +31,8 @@ img{
     
 }
 
-//testing start
 
+//testing start
 .testing__background {
     background: radial-gradient(191.25% 90.42% at 0.00% 58.21%, rgba(199, 185, 240, 0.60) 0%, rgba(199, 200, 208, 0.00) 100%), radial-gradient(196.86% 84.45% at 100.00% 62.23%, rgba(199, 185, 240, 0.60) 0%, rgba(199, 200, 208, 0.00) 100%), #FFF;
 }
@@ -41,47 +41,30 @@ img{
     display: flex;
     flex-direction: column;
     gap: 64px;
-    background-image: url(../img/testing-5.png),url(../img/testing-6.png);
+    background-image: url(../img/testing-6.png),url(../img/testing-5.png);
     background-repeat: no-repeat;
-    background-position: right 106px,left 478px;
-    padding-top: 120px;
-    padding-bottom: 120px;
-    padding-left: 96px;
-    padding-right: 96px;
-    @media (max-width: 1366px) {
-        background-position: right 106px,left calc(560px + (478 - 560) * ((100vw - 900px) / (1366 - 900)));
-    }
-    @media (max-width: 899px) {
-        padding-top: calc(60px + (120 - 60) * ((100vw - 320px) / (900 - 320)));
-        padding-bottom: calc(60px + (120 - 60) * ((100vw - 320px) / (900 - 320)));
-        padding-left: calc(32px + (96 - 32) * ((100vw - 320px) / (900 - 320)));
-        padding-right: calc(32px + (96 - 32) * ((100vw - 320px) / (900 - 320)));
-        background-size: 100%;
-    }
-    @media (max-width: 899px) {
-        background-position: right calc(210px + (-106 - 210) * ((100vw - 708px) / (1366 - 708))),left calc(510px + (560 - 510) * ((100vw - 708px) / (1366 - 708)));
-    }
-    @media (max-width: 707px) {
-        background-position: right calc(240px + (210 - 240) * ((100vw - 586px) / (1366 - 586))),left calc(510px + (510 - 510) * ((100vw - 586px) / (1366 - 586)));
-    }
-    @media (max-width: 585px) {
-        background-position: right calc(390px + (240 - 390) * ((100vw - 500px) / (1366 - 500))),left 840px;
-    }
-    @media (max-width: 500px) {
+    background-position: left 433px,right 61px;
+    padding-top: calc(60px + (120 - 60) * ((100vw - 320px) / (1366 - 320)));
+    padding-bottom: calc(60px + (120 - 60) * ((100vw - 320px) / (1366 - 320)));
+    padding-left: calc(32px + (96 - 32) * ((100vw - 320px) / (1366 - 320)));
+    padding-right: calc(32px + (96 - 32) * ((100vw - 320px) / (1366 - 320)));
+    @media (max-width: 819px) {
         background-image: url(../img/testing-6.png),url(../img/testing-5.png),url(../img/testing-6.png),url(../img/testing-5.png);
-        background-position: left -53px, right calc(400px + (106 - 400) * ((100vw - 320px) / (1366 - 320))),left calc(820px + (840 - 820) * ((100vw - 320px) / (1366 - 320))), right 1350px;
+        background-position: left -70px, right 480px,left 1010px, right 1560px;
+        background-size: 80%,80%;
     }
 }
 
 .testing__row {
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: space-between;
-    @media (max-width: 585px) {
+    gap: calc(50px + (100 - 50) * ((100vw - 320px) / (1366 - 320)));
+    @media (max-width: 819px) {
         flex-wrap: wrap;
         justify-content: center;
     }
-    @media (max-width: 585px) {
+    @media (max-width: 819px) {
         .testing__text {
             order: 1;
         }
@@ -91,26 +74,18 @@ img{
 .testing__text {
     display: flex;
     flex-direction: column;
-    flex: 1 0 271px;
+    flex: 1 0 220px;
     max-width: 547px;
-    @media (max-width: 834px) {
-        max-width: 427px;
-    }
     h2 {
         font-size: 24px;
         font-style: normal;
         font-weight: 700;
         line-height: normal;
         margin: 0px 0px 16px 0px;
+        @media (max-width: 819px) {
+            text-align: center;
+        }
     }
-}
-
-.testing__text-left {
-    margin-right: 10px;
-}
-
-.testing__text-right {
-    margin-left: 10px;
 }
 
 .testing__text-white {
@@ -121,8 +96,9 @@ img{
     display: flex;
     flex-direction: column;
     gap: 32px;
-    @media (max-width: 585px) {
+    @media (max-width: 819px) {
         align-items: center;
+        text-align: justify;
     }
 }
 
@@ -143,21 +119,17 @@ img{
 .testing__learn-text {
     display: flex;
     gap: 8px;
-    
 }
 
 .testing__learn-text::after {
     content: url('../img/svg/testing-7.svg');
 }
-
-@media (max-width: 585px) {
-    .testing__text-black {
-        .testing__text-white {
-            color: #221E29;
-        }
-        h2 {
-            color: #221E29;
-        }
+@media (max-width: 819px) {
+    .testing__text-white {
+        color: #221E29;
+    }
+    h2 {
+        color: #221E29;
     }
 }
 //testing end
